--- a/src/app/post-card/post-card.component.html
+++ b/src/app/post-card/post-card.component.html
@@ -1,1 +1,5 @@
-<p>post-card works!</p>
+<mat-card>
+  <mat-card-title>{{ post?.title }}</mat-card-title>
+  <mat-card-subtitle>{{ post?.author }} at {{ post?.date }}</mat-card-subtitle>
+  <mat-card-content>{{ post?.content }}</mat-card-content>
+</mat-card>
