change footer notes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -393,8 +393,8 @@
 
   <!-- Footer -->
   <footer>
-    Any suggestions or feedbacks? &nbsp; Feel free to let me know: &nbsp; &nbsp;
-    <b>ping-yao_shen@brown.edu</b>
+    Any suggestions or feedbacks? &nbsp; Feel free add to a new post telling me
+    what you think :)
   </footer>
 
   <svg
